<resources>
    <string name="app_name">Accident Tracking</string>
    <string name="report_accident">Report Accident</string>
    <string name="accident_type_with_example">Accident Type e.g. Head On Collision</string>
    <string name="cause_with_example">Cause e.g. drunk driving, weather e.t.c</string>
    <string name="causal_vehicle_with_example">Vehicle that caused e.g psv, truck, personal e.t.c</string>
    <string name="causal_vehicle_group_with_owner">Enter group/sacco/owner e.g 4.N.T.E, school bus e.t.c</string>
    <string name="number_of_vehicles_involved">Number of vehicles involved</string>
    <string name="passenger_casualties">Passenger Casualties</string>
    <string name="passersby_casualties">Passersby casualties</string>
    <string name="other_casualties">Other Casualties</string>
    <string name="casualties">Casualties: passenger, passersby, other</string>
    <string name="current_loc">Are you at the scene now?</string>
    <string name="proceed">Proceed</string>
    <string name="use_current_location">use current location</string>
    <string name="or">or</string>
    <string name="add_location">add location</string>
    <string name="pin_code">area code(optional)</string>
    <string name="city">county</string>
    <string name="locality">locality or nearest town</string>
    <string name="street_address">street name or nearest feature</string>
    <string name="enter_location_manually">Enter location manually</string>
    <string name="enter_brief_description">A brief description of the accident is welcome</string>
    <string name="casualty_description">Provide a description of the casualties (optional)</string>
    <string name="enter_date_of_accident">Enter date of accident</string>
    <string name="accident_time">Enter time of accident (approximate accepted)</string>
    <string name="provide_contact_details">Provide your contact details for follow up</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone number</string>
    <string name="finish">Finish</string>
    <string name="quick_statistics">Quick Statistics</string>
    <string name="total_accidents_reported">Total Accidents Reported</string>
    <string name="total_casualties_reported">Total Casualties Reported</string>
    <string name="accidents_reported_today">Accidents Reported today</string>
    <string name="total_casualties_reported_today">Total casualties reported today</string>
    <string name="_0">0</string>
    <string name="home">Home</string>
    <string name="stats">Analytics</string>
    <string name="report">Report</string>
    <string name="latest_records">Latest Records</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>