<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="387dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/quick_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/quick_statistics"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <GridLayout
                android:id="@+id/grid_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:columnCount="2"
                android:rowCount="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/total_accidents_reported"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/total_accidents_reported" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/total_accidents_count"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:background="@drawable/blue_circle"
                        android:padding="10dp"
                        android:text="@string/_0"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/total_casualties_reported"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_casualties_reported" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/total_casualties_count"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:background="@drawable/pink_circle"
                        android:text="@string/_0"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/total_accidents_reported_today"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/accidents_reported_today" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/total_accidents_reported_today_count"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:background="@drawable/green_circle"
                        android:text="@string/_0"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/total_casualties_today"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/total_casualties_reported_today" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/total_casualties_today_count"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:background="@drawable/greyish_circle"
                        android:text="@string/_0"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />
                </LinearLayout>

            </GridLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <include
        android:id="@+id/bottom_navigation_view"
        layout="@layout/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>